# OZrV-2025-backend

./: .env  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  test.py
src/: __init__.py  bert.py  config.py  database.py  huesos.json  main.py  models.py  parse_to_db.py
src/database/models/: __init__.py  chat.py  event.py  event_user.py  message.py  question_answer.py  statistics.py  user.py
src/migrations/: env.py
src/migrations/versions/: 05f9618c37b1_.py  1c2ac8ea31ed_.py  415d2ab487a7_.py  5cc6cabb8aaa_.py  6b456a9c0e34_.py  765f212da6cb_.py  7ec1ea7aa7c1_.py  afff89d077e6_.py  de2b1c5da2f6_.py
src/repositories/: auth_repository.py  chat_repository.py  event_repisotory.py  event_user_repository.py  message_repository.py
src/routers/: __init__.py  auth_router.py  chat_router.py  event_router.py
src/schemas/: auth_schema.py  chat_schema.py  event_schema.py  message_schema.py  statistics_schema.py
src/utils/notification/: mail.py  mail_content.py
src/utils/schedule/: schedule.py
src/utils/security/: token.py
src/utils/translate/: translate.py
